--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ The Job</h4>
 					</div>
 
 					<div class="col-lg-3   text-center">
-						<img  src="img/lara0.png" height="50">
+						<img  src="img/lara.png" height="50">
 						</div>
 
 					<div class="col-lg-3   text-center">
@@ -230,7 +230,7 @@ The Job</h4>
 					<div class="row align-items-center">
 						<div class="col-lg-6 about-left">
 
-							<img src="img/j.png" height="225px" ,wdith="225px"></div>
+							<img src="img/logo.png" height="225px" ,wdith="225px"></div>
 
 
 						<div class="col-lg-6 about-right">
@@ -240,9 +240,10 @@ The Job</h4>
 						   </h1>
 							 <p style="
 							 font-family: 'San Francisco', Helvetica, Arial, san-serif;
-							 color: #b9b6b6;
-							 line-height: 32px;
-							 font-size:20px;
+	 						color: #b9b6b6;
+	 						line-height: 32px;
+	 						font-size:20px;
+	 						padding-bottom:22px;
 	">
 						 	  	Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						   </p>
@@ -325,6 +326,7 @@ The Job</h4>
 								line-height: 32px;
 								font-size:20px;
 								margin-bottom:15px;
+								padding-bottom:22px;
 	">Who are in extremely love with eco friendly system.</p>
 							</div>
 						</div>
@@ -338,11 +340,12 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-									margin-bottom:15px;">
+									 font-family: 'San Francisco', Helvetica, Arial, san-serif;
+	 								color: #b9b6b6;
+	 								line-height: 32px;
+	 								font-size:20px;
+	 								margin-bottom:15px;
+	 								padding-bottom:22px;">
 
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -360,11 +363,12 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-									margin-bottom:15px;
+									 font-family: 'San Francisco', Helvetica, Arial, san-serif;
+ 									color: #b9b6b6;
+ 									line-height: 32px;
+ 									font-size:20px;
+ 									margin-bottom:15px;
+ 									padding-bottom:22px;
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -381,11 +385,12 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size: 20px;
-									margin-bottom:15px;
+									 font-family: 'San Francisco', Helvetica, Arial, san-serif;
+	 								color: #b9b6b6;
+	 								line-height: 32px;
+	 								font-size:20px;
+	 								margin-bottom:15px;
+	 								padding-bottom:22px;
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -402,11 +407,12 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-									margin-bottom:15px;
+									 font-family: 'San Francisco', Helvetica, Arial, san-serif;
+	 								color: #b9b6b6;
+	 								line-height: 32px;
+	 								font-size:20px;
+	 								margin-bottom:15px;
+	 								padding-bottom:22px;
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -423,11 +429,12 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-									margin-bottom:15px;
+									 font-family: 'San Francisco', Helvetica, Arial, san-serif;
+	 								color: #b9b6b6;
+	 								line-height: 32px;
+	 								font-size:20px;
+	 								margin-bottom:15px;
+	 								padding-bottom:22px;
 
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -445,11 +452,12 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-									margin-bottom:15px;
+									 font-family: 'San Francisco', Helvetica, Arial, san-serif;
+	 								color: #b9b6b6;
+	 								line-height: 32px;
+	 								font-size:20px;
+	 								margin-bottom:15px;
+	 								padding-bottom:22px;
 
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -549,10 +557,11 @@ height: 135px;">
 
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
-				<div class="container">
-<div class="row">
-	<div class="col-md-4">
-		<img src="img\j.png" height="40px" >
+				<div class="container style="    top: -89px;
+		position: relative;">
+		<div class="row">
+		<div class="col-md-4">
+		<img src="img\logo.png" height="40px" >
 								<div class="single-footer-widget">
 										<br>
 									<h6> Cyphertree Technologies Pvt Ltd.
@@ -562,20 +571,20 @@ height: 135px;">
 												Viman Nagar, Pune</a></li>
 									</ul>
 								</div>
-	</div>
-	<div class="col-md-4">
+		</div>
+		<div class="col-md-4">
+		<br>
 		<br>
 		<br>
 		<h6>Contact:</h6>
 		<ul class="footer-nav">
 			<li> <a href="#"> sales@cyphertree.com <br> +91 7252824179</a></li>
 		</ul>
-<br>
-<br>
+
 		<div id="mc_embed_signup">
 			<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
 
-				<div class="form-group row" style="width: 100%">
+				<div class="form-group row" style="width: 221px">
 
 						<button class="nw-btn primary-btn" > General Enquiries<span class="lnr lnr-arrow-right"></span></button>
 						<div style="position: absolute; left: -5000px;">
@@ -585,55 +594,40 @@ height: 135px;">
 					</div>
 
 
-	</div>
-	<div class="col-lg-4 text-center">
-		<div>
-	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/AS.JPG" alt="Asihwariya">
 		</div>
-<h6> Aishwarya Singh </h6>
-		<div>
-			<BR>
-				<button class="nw-btn primary-btn" > Let's Talk<span class="lnr lnr-arrow-right"></span></button>
+		<div class="col-md-4">
+
+		<img class="rounded-circle  sp-image" src="img/ash.jpg" alt="Asihwariya">
+
+		<h6 style="
+
+
+
+		">Aishwarya Singh</h6>
+
+
+		<ul class="footer-nav">
+			<li> <a href="#"> sales@cyphertree.com <br> +91 7252824179</a></li>
+		</ul>
+
+
+				<button class="nw-btn primary-btn"> Let's Talk<span class="lnr lnr-arrow-right"></span></button>
+
+
+
 		</div>
 
-	</div>
-</div>
-
-
-
-
-					<div class="row">
-						<br>
-						<div class="col-md-3">
-
-						</div>
-						<div class="col-md-3 ">
-							<div class="single-footer-widget newsletter">
-								<br>
-<br>
-<br>
 
 
 
 
 
-											</div>
-<div class="col-md-3">
-
-</div>
-											<div class="col-md-3 ">
-
-
-											</div>
-										</div>
-										<div class="info"></div>
-									</form>
-								</div>
-							</ul></div>
 						</div>
 
 					</div>
-					<div class="row">
+					<div class="row width=200px" style=" padding-left: 80px;
+		padding-right: 51px;
+		padding-top: 22px;">
 						<span class="col-12 col-md-4 mb-5 mb-md-0 social-media"><a href="https://wwww.instagram.com" class="social-media"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" size="24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
 						<path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
 						</path></svg>
